--- a/pytest.ini
+++ b/pytest.ini
@@ -14,6 +14,7 @@ markers =
     end2end: End to end tests which run qutebrowser as subprocess
     xfail_norun: xfail the test with out running it
     ci: Tests which should only run on CI.
+    no_ci: Tests which should not run on CI.
     qtwebengine_todo: Features still missing with QtWebEngine
     qtwebengine_skip: Tests not applicable with QtWebEngine
     qtwebkit_skip: Tests not applicable with QtWebKit
@@ -25,7 +26,6 @@ markers =
     this: Used to mark tests during development
     no_invalid_lines: Don't fail on unparseable lines in end2end tests
     issue2478: Tests which are broken on Windows with QtWebEngine, https://github.com/qutebrowser/qutebrowser/issues/2478
-    issue2777: Tests which are broken on Travis in Docker, https://github.com/qutebrowser/qutebrowser/issues/2777
 qt_log_level_fail = WARNING
 qt_log_ignore =
     ^SpellCheck: .*
