Ignore a new Geoclue error during tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -46,6 +46,7 @@ qt_log_ignore =
     ^QStandardPaths: XDG_RUNTIME_DIR not set, defaulting to .*
     ^QGeoclueMaster error creating GeoclueMasterClient\.
     ^Geoclue error: Process org\.freedesktop\.Geoclue\.Master exited with status 127
+    ^Failed to create Geoclue client interface. Geoclue error: org\.freedesktop\.DBus\.Error\.Disconnected
     ^QObject::connect: Cannot connect \(null\)::stateChanged\(QNetworkSession::State\) to QNetworkReplyHttpImpl::_q_networkSessionStateChanged\(QNetworkSession::State\)
     ^QXcbClipboard: Cannot transfer data, no data available
     ^load glyph failed
