Show diff on Travis in check_doc_changes

--- a/tox.ini
+++ b/tox.ini
@@ -230,7 +230,7 @@ commands =
 [testenv:docs]
 basepython = python3
 whitelist_externals = git
-passenv = TRAVIS_PULL_REQUEST
+passenv = TRAVIS TRAVIS_PULL_REQUEST
 deps =
     -r{toxinidir}/requirements.txt
 commands =
